[package]
edition = "2024"
name = "iptv"
version = "0.2.3"

[features]
http2 = ["reqwest/http2"]
tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls"]

[dependencies]
actix-web = { version = "4.12", default-features = false, features = ["macros"] }
anyhow = "1.0.101"
clap = { version = "4.5", features = ["derive"] }
async-stream = "0.3"
chrono = "0.4.43"
des = "0.8"
ecb = { version = "0.1", features = ["alloc", "block-padding"] }
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
] }
futures-core = "0.3"
futures-util = "0.3"
handlebars = "6"
hex = "0.4"
local-ip-address = "0.6"
log = "0.4"
md5 = "0.8"
rand = "0.9"
regex-lite = "0.1"
reqwest = { version = "0.13", default-features = false, features = [
    "cookies",
    "json",
] }
retina = { git = "https://github.com/yujincheng08/retina.git", branch = "iptv", default-features = false }
rtp-rs = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.6"
tokio = "1"
tokio-util = { version = "0.7.18", features = ["codec", "net"] }
toml = "0.9"
xml-rs = "1.0.0"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
